<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:id="@+id/drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/image_slider"
                android:layout_width="match_parent"

                android:layout_height="0dp"
                app:layout_constraintHeight_percent=".4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"


                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"

                app:sliderIndicatorMarginBottom="55dp"

                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/dark_blue"
                app:sliderIndicatorUnselectedColor="@color/gold"
                app:sliderScrollTimeInSec="2"
                app:sliderStartAutoCycle="true"
                app:layout_constraintVertical_bias="0">

            </com.smarteist.autoimageslider.SliderView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/vie_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".66"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/Lytbuttons"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="2dp">

                    <Button
                        android:id="@+id/btnWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textSize="13sp"
                        android:background="@drawable/button"
                        />

                    <Button
                        android:id="@+id/btnStdportal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/studentPortal"
                        android:layout_marginTop="5dp"
                        android:textSize="13sp"
                        android:background="@drawable/button"
                        />

                    <Button
                        android:id="@+id/btnStdMoodle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button"
                        android:text="@string/moodle"
                        android:textSize="13sp"
                        />

                    <Button
                        android:id="@+id/btneLearning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="13sp"
                        android:background="@drawable/button"
                        android:text="@string/distantlearningPortal"
                        />


                    <Button
                        android:id="@+id/btnLctPortal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="13sp"
                        android:background="@drawable/button"
                        android:text="@string/lecturePortal"
                        />

                    <Button
                        android:id="@+id/btnStfPortal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="13sp"
                        android:background="@drawable/button"
                        android:text="@string/staffPortal"
                        />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>